<resources>
    <string name="app_name">Wake me up</string>
    <string name="splash_loading">Loading.....</string>
    <string name="title_activity_main"> Categories  </string>
    <string name="app_version_info">Version 1.2.0\nCopyright © 2016 \n Attia Eldsoky * Emad Ahmed\nAll
    Rights Reserved.</string>
    <string name="search_hint">Search contact</string>
    <string name="CategoryContacts">Members</string>
    <string name="frag_db">Confirm add Contact</string>
    <string name="error">Error</string>
    <string name="error_messg">Please fill all required fields</string>
    <string name="existing_category">Category name or time is exists already</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_frag_ok">Ok</string>
    <string name="defult_category_name">Group</string>
    <string name="category_name">category name  </string>
    <string name="category_time">category time</string>
    <string name="category_Time">set time to category </string>
    <string name="icon_addContact">Add Contact</string>
    <string name="add_category">Add New Category</string>
    <string name="icon_refresh">Refresh</string>
    <string name="frag_addContacts">Select</string>
    <string name="icon_settings">Settings</string>
    <string name="icon_about">About</string>
    <string name="time_call">Time to Call number</string>
    <string name="service_notify">Wakemeup  Running</string>
    <string name="category_Updatedelete">Category deleted Successfully</string>
    <string name="contacts_update">Contacts updated Successfully</string>
    <string name="categories_update">Categories updated Successfully</string>
    <string name="contact_UpdateDelete">Contact Deleted Successfully</string>
    <string name="delete_contact">Deleting contact</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_messg">Do you want to delete this contact from category?</string>
    <string name="delete_messg2">Do you want to delete this category? \n All contacts and phones will also deleted</string>
    <string name="category_info">info</string>
    <string name="search_result">Search for contact</string>
    <string name="category_info_name">Category Name: </string>
    <string name="category_info_time">Call Time: </string>
    <string name="category_info_contacts">total Contacts: </string>
    <string name="category_info_Title">Category Information</string>
    <string name="update_time">Update</string>
    <string name="update_title">Change category time</string>
    <string name="title_activity_settings">Settings</string>
    <string name="azkar_title_notification">Wakemeup Azkar</string>
    <string name="akzar_morning">لا إله إلا الله وحده لاشريك له\n له الملك وله الحمد\nوهو علي كل شئ قدير</string>
    <string name="setting_save">Save</string>
<string name="hint_category_name">Please be careful while choosing your category name\n\nas it will be final which mean you can not change it\n
</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_select_contact">Select Contact</string>
</resources>
