<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:icon="@mipmap/ic_refresh"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/icon_refresh"
        android:id="@+id/btn_refresh"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/icon_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/icon_about"
        app:showAsAction="never" />


</menu>