<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:title="@string/update_time"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/updtae_time_ic"/>
    <item
        android:id="@+id/btn_menu_settings"
        android:icon="@mipmap/ic_addcontact"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_contacts_refresh"
        android:icon="@mipmap/ic_refresh"
        android:title="@string/icon_refresh"
        app:showAsAction="never" />
    <item android:title="@string/category_info"
        android:id="@+id/btn_info"
        app:showAsAction="never"/>


</menu>