<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">
    <TextView
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="#BEEB9F"
        android:paddingTop="12sp"
        android:hint="@string/category_Time"
        android:id="@+id/et_update_time"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_frag_ok"
            android:id="@+id/btn_ok_update"
            android:layout_weight="50"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/btn_cancel_update"
            android:layout_weight="50"/>

    </LinearLayout>
</LinearLayout>